--- a/style.css
+++ b/style.css
@@ -1,8 +1,105 @@
+
+/* per commentare e non shift + alt + a */
+
 html, body {
   margin: 0;
   padding: 0;
+  position: relative;
+  
+/*   font-family: sans-serif; */
+  font-family: 'IBM Plex Sans', sans-serif;
+  font-size: 0.9em;
+  
+  overflow: hidden;
 }
 
-canvas {
-  display: block;
+::-webkit-scrollbar {
+  display: none;
+}
+
+div {
+  display: flex;
+  flex-direction: column;
+  float:left;
+
+  box-sizing: border-box;
+  padding: 1vh;
+}
+
+/* ELEMENTI NAVIGAZIONE IN ALTO */
+
+.nav{
+  z-index: 1;
+  position: fixed;
+}
+
+#io {
+  padding-left: 1vh;
+/*   font-size: 13pt; */
+}
+
+#works {
+  padding-right: 1vh;
+  right:0;
+/*   font-size: 13pt; */
+
+  text-align: right;
+}
+
+ 
+#list{
+  padding-top:10vh;
+  overflow: hidden;
+  width: 15%;
+  height: 100vh;
+  
+  border-left: solid 1px black;
+
+ /*  background-color:burlywood; */
+}
+
+
+.listelement{
+  width:100%;
+  position: relative;
+  padding-top: 1vh;
+  margin: 0;
+}
+
+.listanno{
+  padding-top: 4vh;
+  font-style: oblique;
+  font-size: 0.7em;
+/*   border-bottom: solid 1px black; */
+}
+
+
+a { 
+  color: black;
+  padding: 1px;
+  border-bottom: 1px solid black;
+  text-decoration: none;
+
+}
+
+
+@media screen and (max-width: 992px) {
+  
+#list{
+  display: none;
+}
+
+}
+
+
+@media screen and (max-width: 600px) {
+      
+  #list{
+    display: none;
+  }
+
+.nav{
+  font-size: 0.6em;
+}
+
 }
