--- a/index.css
+++ b/index.css
@@ -147,3 +147,12 @@ img {
     width: 90%;
 } */
 
+
+@media screen and (max-width: 992px) {
+  
+    #gridprojects{
+      width: 100%;
+    }
+    
+    }
+    
