--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ div {
   width: 15%;
   height: 100vh;
   
-  border-left: solid 1px black;
+/*   border-left: solid 1px black; */
 
  /*  background-color:burlywood; */
 }
