--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 #gridprojects{
-/*     width: 85%; */
-width: 100%;
+    width: 85%;
+/* width: 100%; */
     height: 100vh;
     box-sizing: border-box;
     
@@ -16,14 +16,22 @@ width: 100%;
     
 /*  grid-template-columns: auto auto auto auto auto ;
     grid-template-rows: auto auto auto; */
-
+/* 
     grid-template-areas:
     ".  . x1 x1 x9 x9 x9  ."
     "x2 . x1 x1  .  .  x7 x7 "
     "x2 x3 x3 x3 .  .  x7 x7"
     "x2 x6 x6 .  x5 x5 x8 x8"
     " . x6 x6 x4 x4  . x8 x8"
-    " . . .  x4 x4  . . .";
+    " . . .  x4 x4  . . ."; */
+
+    grid-template-areas:
+    " . . x1 x1 x9 x9 x9  . "
+    "x2 . x1 x1  . .  x7 x7 "
+    "x2 x3 x3 x3 .  . x7 x7 "
+    " x2 x6 x6 . x5 x5 x8 x8"
+    " . x6 x6 x4 x4  . x8 x8"
+    "  . . .  x4 x4 . . .";
   
   grid-template-columns: repeat(8, 1fr);
   grid-template-rows: repeat(5, 1fr);
@@ -32,8 +40,8 @@ width: 100%;
 }
 
 [class*="item"] {
-    justify-content: center;
-/*     background-color: blue; */
+    justify-content: center;/* 
+    background-color: blue; */
     width:100%;
     height:auto;
   /*   padding: 20px  0; */
@@ -118,6 +126,22 @@ img {
     top:0vh;
     width:80%; }
 
+.info {
+        display: none;
+        position: absolute;
+     }
+
+     
+    [class*="item"]:hover .info {
+       display: block;
+       bottom:-8vh;
+    }
+
+    [class*="item"]:hover .numero{
+        display: none;
+     }
+
+
 
 [class*="overlay"] {
   position: absolute;
@@ -133,8 +157,9 @@ img {
   
 }
 
-[class*="overlay"]:hover {
-    display:none;
+
+[class*="item"]:hover .overlay{
+    display: none;
  }
 
 /* .overlay2 {
@@ -152,7 +177,7 @@ img {
 } */
 
 
-@media screen and (max-width: 992px) {
+@media screen and (max-width: 768px) {
 
     body,html {
         overflow: auto;
