--- a/style.css
+++ b/style.css
@@ -35,15 +35,24 @@ div {
 
 #io {
   padding-left: 1vh;
-/*   font-size: 13pt; */
 }
 
 #works {
   padding-right: 1vh;
   right:0;
-/*   font-size: 13pt; */
 
   text-align: right;
+}
+
+#contacts {
+  bottom:0;
+/*   right:0;
+  padding-right: 1vh;
+  text-align: right; */
+  padding-left: 1vh;
+}
+.contacts{
+margin:0 1vh;
 }
 
  
@@ -53,7 +62,7 @@ div {
   width: 15%;
   height: 100vh;
   
-/*   border-left: solid 1px black; */
+  border-left: solid 1px black;
 
  /*  background-color:burlywood; */
 }
