--- a/about.css
+++ b/about.css
@@ -19,8 +19,9 @@ html, body{
     display: block;
     margin:0;
     padding-right:20vh;
+    width:auto;
 
-    font-size: 2.7em;
+    font-size: 2.4rem;
 /*   background-color:burlywood; */
 }
 
@@ -47,13 +48,15 @@ img{
 #marghe {
     
     top:20vh;
-/*     float:right;
-    -webkit-transform: scaleX(-1);
-    transform: scaleX(-1); */
+    float:right;
 /*     padding-right: 3vh; */
 /*     background: orange; */
     clip-path: polygon(0 100%, 8% 95%, 43% 55%, 73% 63%, 89% 71%, 100% 33%, 100% 0, 78% 0, 65% 15%, 33% 24%, 0 45%);
     shape-outside: polygon(0 100%, 8% 95%, 43% 55%, 73% 63%, 89% 71%, 100% 33%, 100% 0, 78% 0, 65% 15%, 33% 24%, 0 45%);
+
+    
+    -webkit-transform: scaleX(-1);
+    transform: scaleX(-1);
    }
 
 @media screen and (max-width : 1024px) {
@@ -66,7 +69,7 @@ img{
     margin:0;
     padding-right:20vh;
 
-    font-size: 2.7em;
+    font-size: 2.7rem;
 /*   background-color:burlywood; */
 }
 
@@ -80,12 +83,12 @@ img{
 }
     
     
-    @media screen and (max-width: 600px) {
+    @media screen and (max-width:768px) {
           
         body,html {
             
       overflow: auto;
-      font-size: 0.9em;
+      font-size: 0.9rem;
         }
 
         #marghe {
