--- a/pages/project.css
+++ b/pages/project.css
@@ -9,7 +9,7 @@ img {
 
 span {
     padding-bottom: 1vh;
-    font-size: 0.7em;
+    font-size: 0.7rem;
     font-style: oblique;
 }
 
@@ -28,7 +28,7 @@ span {
 }
 
 #titolo{
-    font-size: 2.1em;
+    font-size: 2.1rem;
     padding:0%
  }
 
@@ -40,7 +40,8 @@ span {
 
     max-width: 95%;
     padding:0%;
-    padding-bottom: 20vh;
+    margin-bottom: auto;
+    min-height: 65vh;
     display: block;
  }
 
@@ -53,11 +54,12 @@ span {
 }
 
 #info{
+    box-sizing: border-box;
     padding:0%;
     flex-direction: row;
     justify-content: space-evenly;
-    height:20vh;
-    
+    height:auto;
+    padding-bottom: 10vh;
 /*     background-color: aquamarine; */
 }
 
@@ -78,8 +80,13 @@ a{
 
 iframe {/* 
     overflow-clip-margin: content-box; */
-    height: 1000px;
+/*     height: 1000px; */
     overflow: auto;
+    
+    padding-bottom: 56.25%;
+    
+    width: 100%;
+    height: 100%;
 }
 
 #player {
@@ -99,12 +106,12 @@ iframe {/*
 }
 
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 768px) {
       
     body,html {
         
   overflow: auto;
-  font-size: 1em;
+  font-size: 1rem;
     }
     
 #projectgallery{
