--- a/pages/project.css
+++ b/pages/project.css
@@ -5,16 +5,19 @@ div{
 
 img { 
     width:100%;
+    max-height: 100%;
 }
 
-span {
+.titObl{
     padding-bottom: 1vh;
-    font-size: 0.7rem;
     font-style: oblique;
 }
+/*     font-size: 0.7rem; */
+
 
 #projectlist{
-    width: 35%;
+    width: 25%;
+    
     height: 100vh;
 
     padding: 0%;
@@ -24,33 +27,43 @@ span {
     flex-direction: column;
     overflow: auto;
     
+    border-left: solid 1px black; 
+    
+    font-size:0.75rem;
+    
 /*  background-color: aqua; */
 }
 
+#main{
+    height: 100vh;
+    margin:auto;
+}
+
 #titolo{
-    font-size: 2.1rem;
+    font-size: 1.75rem;
     padding:0%
  }
 
  #anno{
-    padding:1vh 0%;
+    padding:0.75vh 0%;
  }
 
  #descrizione{
 
+
     max-width: 95%;
     padding:0%;
+    padding-top:1.5vh;
     margin-bottom: auto;
-    min-height: 65vh;
+    min-height: 80vh;
     display: block;
  }
 
 #projectgallery{
-    width: 50%;
+    width: 75%;
     height: 100vh;
     overflow-y:auto;
-    
-    border-left: solid 1px black;
+    /* */
 }
 
 #info{
@@ -78,10 +91,10 @@ a{
     width: fit-content;
 }
 
-iframe {/* 
+/* iframe {
     overflow-clip-margin: content-box; */
 /*     height: 1000px; */
-    overflow: auto;
+/*     overflow: auto;
     
     padding-bottom: 56.25%;
     
@@ -91,9 +104,9 @@ iframe {/*
 
 #player {
     height: 1000px;
-}
+} */
 
-@media screen and (max-width : 1024px) {
+/* @media screen and (max-width : 1024px) {
   
    
 #projectgallery{
@@ -104,7 +117,7 @@ iframe {/*
         width: 40%;
     }
 }
-
+ */
 
 @media screen and (max-width: 768px) {
       
