--- a/about.css
+++ b/about.css
@@ -29,8 +29,8 @@ canvas{
 
 [class*="selfp"] {
     margin: 0;
-    font-size: 2.25rem;
-    line-height:3rem;
+    font-size: 1.75rem;
+    line-height:2.25rem;
 }
 
 .padtop {
@@ -72,13 +72,17 @@ img {
 
 #marghe {
 
-    float: left;
+    /* float: left;
     margin-top: 5vh;
-    margin-right: 5vh;
+    margin-right: 5vh; */
     /*     background: orange; */
     clip-path: polygon(0 100%, 8% 95%, 43% 55%, 73% 63%, 89% 71%, 100% 33%, 100% 0, 78% 0, 65% 15%, 33% 24%, 0 45%);
     shape-outside: polygon(0 100%, 8% 95%, 43% 55%, 73% 63%, 89% 71%, 100% 33%, 100% 0, 78% 0, 65% 15%, 33% 24%, 0 45%);
-    /* transform: scaleX(-1); */
+
+    float: right;
+    transform: scaleX(-1);
+    
+    margin-right:-10vh;
 }
 
 #draw {
@@ -104,6 +108,11 @@ img {
         
          padding-right:1vh;
     }
+
+    #marghe{
+        
+    margin-right:-1vh;
+    }
 }
 
 
@@ -122,11 +131,11 @@ img {
         margin-top: 7.5vh; }
 
     #marghe{ 
-    margin-top: 2.5vh;
-    margin-right: 2.5vh;
+    /* margin-top: 2.5vh; */
+    /* margin-right: 2.5vh; */
     
-    width: 50%;
-    margin-left:-1vh;
+    width: 40vw;
+    /* margin-left:-1vh; */
     }
 
  /*    #prescontainer {
