--- a/old but/index copy 2.css
+++ b/old but/index copy 2.css
@@ -1,42 +1,86 @@
 #gridprojects {
     width: 100%;
     height: 100vh;
-    display: flex;
+    box-sizing: border-box;
+    
+    display: grid;
+/*     gap: 2vh; */
 
-    flex-direction: row;
+    grid-template-areas:
+        "x2 x2 . . . . x1 x1 x7 x7 . ."
+        "x2 x2 . . . . x1 x1 x7 x7 . ."
+        "x3 x3 x6 x6 x5 x5 . . . . . ."
+        "x3 x3 x6 x6 x5 x5 . . . . . ."
+        ". . x4 x4 . . . .x9 x9 x8 x8"
+        ". . x4 x4 . . . .x9 x9 x8 x8";
 
-    overflow-y: scroll;
-}
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: repeat(6, 1fr);
 
-[class*="line"] {
-    display:flex;
-    flex-direction: column;
-    justify-content: space-between;
-    height: 100%;
-    width: 30%;
+    overflow: auto;
 }
 
 [class*="item"] {
     justify-content: center;
-    position: relative;
-
-    display: block;
     width: 100%;
-    height:auto;
+    height: 30%;
+    position: relative;
+}
+
+.item1 {
+    grid-area: x1;
+}
+
+
+.item2 {
+    grid-area: x2;
+}
+
+.item3 {
+    grid-area: x3;
+}
+
+.item4 {
+    grid-area: x4;
+}
+
+.item5 {
+    grid-area: x5;
+}
+
+.item6 {
+    grid-area: x6;
+}
+
+.item7 {
+    grid-area: x7;
+}
+
+.item8 {
+    grid-area: x8;
+}
+
+.item9 {
+    grid-area: x9;
 }
 
 img {
-    position: relative;
-    display: block;
-   /*  height: 100%;
-    width:auto; */
-    width: 100%;
-    height:auto;
+/*     position: absolute;
+display: block; */
+    height: auto;
+    width:100%;
     /* max-height: 100%; */
     /* max-width: 100%; */
     z-index: 0;
 }
 
+.numero {
+    position: absolute;
+     top: 0;
+    left: 0;
+    z-index: 10;
+    text-align: center;
+}
 
 [class*="item"] a {
    border:none;
@@ -57,6 +101,37 @@ img {
     display: none;
 }
 
+
+.info1 {
+    top: 0;
+    left: -50vh;
+}
+
+
+[class*="overlay"] {
+    position: absolute;
+    width: 90%;
+    height: auto;
+    z-index: 2;
+    display: none;
+}
+
+.gif {
+    display: none;
+}
+/* 
+[class*="item"]:hover img {
+    display: none;
+} */
+
+[class*="item"]:hover .gif {
+    display: block;
+/*     position: absolute; */
+    width: 90%;
+    height: auto;
+    z-index: 2;
+/*     top:0; */
+}
 
 
 @media screen and (max-width: 1024px) {
