--- a/index.css
+++ b/index.css
@@ -1,19 +1,44 @@
+html,body{
+    overflow: auto;
+}
+
 #gridprojects {
     width: 100%;
     height: 100vh;
     display: flex;
 
     flex-direction: row;
-
-    overflow-y: scroll;
+    
+    overflow: auto;
 }
 
 [class*="line"] {
+    position: fixed;
     display:flex;
+    height:100%;
     flex-direction: column;
     justify-content: space-between;
-    height: 100%;
-    width: 30%;
+    bottom: -100%;
+    width: 25%;
+    padding-bottom: 15vh;
+    /* overflow: scroll; */
+}
+    
+/*     border-left: 1px black solid; */
+
+.column-reverse{
+    /* position: fixed;
+    left: 25%; */
+    bottom: 0;
+}
+.line2{
+    left:25%
+}
+.line3{
+    left:50%
+}
+.line4{
+    left:75%
 }
 
 [class*="item"] {
@@ -42,22 +67,6 @@ img {
    border:none;
 }
 
-/* 
-[class*="info"] {
-    display: none;
-    position: absolute;
-} */
-
-[class*="item"]:hover .info {
-    display: block;
-    bottom: -8vh;
-}
-
-[class*="item"]:hover .numero {
-    display: none;
-}
-
-
 
 @media screen and (max-width: 1024px) {
 
@@ -78,74 +87,17 @@ img {
     }
 
     #gridprojects {
-        height: 600vh;
-
+        
+        height: 100vh;
+/* 
         gap: 1vh;
 
-        grid-template-areas:
-            ". x1 x1"
-            ". x1 x1"
-            "x3 x3 x3"
-            " x5 x5 ."
-            " x5 x5 x2"
-            "x8 x8 x2"
-            "x8 x8 . "
-            " x9 x9 x9"
-            " x9 x9 x9"
-            ". . ."
-            ". . ."
-            " . x7 x7 "
-            " . x7 x7 "
-            ". x4 x4"
-            ". x4 x4"
-            "x6 x6 . "
-            "x6 x6 . ";
-
-        grid-template-columns: repeat(3, 1fr);
+        grid-template-columns: repeat(2, 1fr);
         grid-template-rows: repeat(7, 2fr) repeat(10, 1fr);
-
-        padding: 1vh;
-
-        padding: 5vh 0;
-
-        padding-bottom: 15vh;
+ */
+        padding: 5vh 0 15vh 1vh;
 
     }
-
-    .item2 img {
-        right: 3vh;
-    }
-
-    .item4 img {
-        /*      transform: scaleX(-1); */
-        right: 0;
-        top: 3vh;
-
-    }
-
-    .item3 img {
-        width: 100vw;
-        left: 0;
-
-    }
-
-    .item5 img {
-        top: 2vh;
-    }
-
-    .item9 img {
-        top: -5vh;
-        width: 85vw;
-        left: 15vw;
-    }
-
-    .item6 img {
-        top: 5vh;
-    }
-
-        [class*="overlay"] {
-            display: none;
-        }
 
     }
 
@@ -153,7 +105,7 @@ img {
     @media screen and (max-width: 600px) {
 
         #gridprojects {
-            height: 230vh;
+            height: 100vh;
 
 
         }
