--- a/pages/project.css
+++ b/pages/project.css
@@ -1,19 +1,3 @@
-div{
-    display: flex;
-    flex-direction: column;
-}
-
-img { 
-    width:100%;
-/*     max-height: 100%; */
-}
-
-.titObl{
-    padding-bottom: 1vh;
-    font-style: oblique;
-}
-/*     font-size: 0.7rem; */
-
 
 #projectlist{
     width: 25%;
@@ -40,31 +24,32 @@ img {
 }
 
 #titolo{
-    font-size: 1.75rem;
-    padding:0%
+    font-size: 2.5rem;
+    line-height: 2.5rem;
+    padding:0%;
+    
+    font-family: 'IBM Plex Sans', sans-serif;
+    font-weight:500;
  }
 
  #anno{
-    padding:0.75vh 0%;
+    padding:1.75vh 0%;
  }
 
  #descrizione{
-
-
     max-width: 95%;
     padding:0%;
     padding-top:1.5vh;
     margin-bottom: auto;
-    min-height: 80vh;
+    /* min-height: 80vh; */
     display: block;
  }
-
-#projectgallery{
-    width: 75%;
-    height: 100vh;
-    overflow-y:auto;
-    /* */
+ .titObl{
+    padding-bottom: 1vh;
+    font-style: oblique;
 }
+
+
 
 #info{
     box-sizing: border-box;
@@ -83,14 +68,27 @@ img {
 /*   background-color:chartreuse; */
 }
 
+
+#projectgallery{
+    width: 75%;
+    height: 100vh;
+    overflow-y:auto;
+    /* */
+}
+
 .galleryelement {
-    margin-top: 1vh;
+    margin-top: 1.5vh;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 0;
 }
 
-a{
-    width: fit-content;
-}
+.galleryelementsmall {
+    display:block;
+    float: left;
+    width:36.75vw;
 
+}
 /* iframe {
     overflow-clip-margin: content-box; */
 /*     height: 1000px; */
@@ -129,12 +127,12 @@ a{
     
 #projectgallery{
     width: 100%;
-    height:auto;
+    height:50vh;
     }
 
     #projectlist{
         width:100%;
-    height:auto;
+    height:50vh;
     }
     
     
