--- a/index.css
+++ b/index.css
@@ -13,12 +13,12 @@ html,body{
 }
 
 [class*="line"] {
-    position: fixed;
+   /*  position: fixed; */
     display:flex;
     height:100%;
     flex-direction: column;
     justify-content: space-between;
-    bottom: -100%;
+    /* bottom: -100%; */
     width: 25%;
     padding-bottom: 15vh;
     /* overflow: scroll; */
@@ -27,10 +27,12 @@ html,body{
 /*     border-left: 1px black solid; */
 
 .column-reverse{
-    /* position: fixed;
-    left: 25%; */
-    bottom: 0;
+    /* /* position: fixed;
+    left: 25%; 
+    bottom: 0;  */
+    overflow: hidden;
 }
+
 .line2{
     left:25%
 }
