--- a/pages/project.css
+++ b/pages/project.css
@@ -1,5 +1,13 @@
 
-#projectlist{
+ 
+    #all{
+        display: flex;
+    flex-direction: row;    
+    margin: 0;
+    padding: 0%;}
+    
+    
+    #projectlist{
     width: 25%;
     
     height: 100vh;
@@ -127,13 +135,20 @@
     
 #projectgallery{
     width: 100%;
-    height:50vh;
+    height:100vh;
     }
 
     #projectlist{
         width:100%;
-    height:50vh;
+    height:100vh;
+    border: none;
     }
     
-    
+    #all{
+ /*        display: flex; */
+    flex-direction: column-reverse;    
+/*     margin: 0;
+    padding: 0%; */
+}
+
   }
