--- a/style.css
+++ b/style.css
@@ -1,16 +1,21 @@
-
 /* per commentare e non shift + alt + a */
 
-html, body {
+:root {
+  --screen-w: 100vw;
+  --screen-h: 100vh;
+}
+
+html,
+body {
   margin: 0;
   padding: 0;
   position: relative;
 
   background-color: #fff;
-  
-  font-family: 'IBM Plex Sans', sans-serif;
-  font-size: 1rem;
-  
+
+  font-family: "IBM Plex Sans", sans-serif;
+  font-size: 16px;
+
   overflow: hidden;
   overflow-x: hidden;
 }
@@ -22,17 +27,12 @@ html, body {
 div {
   display: flex;
   flex-direction: column;
-  float:left;
+  float: left;
 
   box-sizing: border-box;
-  padding: 1vh;
 }
 
-p {
-  margin:0;
-}
-
-a { 
+a {
   color: black;
   border-bottom: solid 1px black;
   padding: 1px;
@@ -41,8 +41,8 @@ a {
 }
 
 img {
-  width:100%;
-  height:auto;
+  width: 100%;
+  height: auto;
 }
 
 /* ELEMENTI NAVIGAZIONE IN ALTO */
@@ -51,24 +51,25 @@ img {
   background-color: transparent;
   white-space: nowrap;
   color: #fff;
-  
-  mix-blend-mode:difference;
+
+  mix-blend-mode: difference;
 
   vertical-align: baseline;
 
   z-index: 10;
   position: fixed;
-  margin:1vh 0;
+  margin: 1vw;
 
-  font-size: 1rem;
+  font-family: "IBM Plex Serif", serif;
+  font-weight: 350;
 }
-
+/* 
 .nav a {
 
   color: #fff;
   border-bottom: solid 1px white;
   mix-blend-mode: difference;
-}
+} */
 
 #io {
   padding-left: 1vh;
@@ -76,86 +77,63 @@ img {
 
 #works {
   padding-right: 1vh;
-  right:0;
+  right: 0;
 
   text-align: right;
 }
 
-#mail{
-  bottom:1vh;
-  right:1vh;
+#mail {
+  bottom: 1vh;
+  right: 1vh;
   text-align: right;
   border-bottom: solid 1px white;
-/*   padding-right: 1vh; */
+  /*   padding-right: 1vh; */
 }
 
- 
-#list{
-  padding-top:10vh;
+#list {
+  padding-top: 10vh;
   overflow: hidden;
   width: 25%;
   height: 100vh;
-  
-  border-left: solid 1px black;
 
- /*  background-color:burlywood; */
+  /* border-left: solid 1px black; */
+
+  /*  background-color:burlywood; */
 }
 
-
-/* .listelement{
-  width:100%;
-  position: relative;
-  padding-top: 1vh;
-  margin: 0;
-}
-
-.listanno{
-  padding-top: 4vh;
-  font-style: oblique;
-  font-size: 0.7rem;
-/*   border-bottom: solid 1px black;
-}
- */
- 
 .titlObl {
   padding-bottom: 1vh;
   font-style: oblique;
   font-size: 0.75rem;
 }
 
-
 @media screen and (max-width: 992px) {
-  
-#list{
-  display: none;
-}
-#works {
-  padding-right: 2vh;
-}
-
-#mail{
-  bottom:1vh;
- /*  right:0; */
-  margin:0 auto;
-  text-align: center;
-  border-bottom: solid 1px white;
-/*   padding-right: 1vh; */
-}
-
-}
-
-
-@media screen and (max-width: 768px) {
-      
-
-  html{
-overflow:hidden;
-  }
-
-  #list{
+  #list {
     display: none;
   }
-/* 
+  #works {
+    padding-right: 2vh;
+  }
+
+  #mail {
+    bottom: 1vh;
+    /*  right:0; */
+    margin: 0 auto;
+    text-align: center;
+    border-bottom: solid 1px white;
+    /*   padding-right: 1vh; */
+  }
+}
+
+@media screen and (max-width: 768px) {
+  html {
+    overflow: hidden;
+  }
+
+  #list {
+    display: none;
+  }
+  /* 
   .nav{
     margin:0.5vh 0.5vh;
   } */
@@ -163,13 +141,11 @@ overflow:hidden;
   #works {
     padding-right: 1vh;
   }
-  
 
-  #mail{
+  #mail {
     box-sizing: border-box;
     text-align: center;
-    margin:auto;
-   /*  width:100vw; */
+    margin: auto;
+    /*  width:100vw; */
   }
-
 }
