--- a/about.css
+++ b/about.css
@@ -1,10 +1,3 @@
-html,
-body {
-  overflow: hidden;
-
-  z-index: -2;
-}
-
 canvas {
   display: block;
   position: fixed;
@@ -14,13 +7,12 @@ canvas {
 }
 
 #prescontainer {
-  width: 75vw;
-
-  overflow: auto;
-  height: 100vh;
   display: block;
+  width: 77.5vw;
 
-  padding: 1vw;
+  height: 100vh;
+
+  padding-left: 1.75vw;
   padding-right: 10vw;
 
   /*     background-color: black;
@@ -39,35 +31,27 @@ canvas {
   margin-top: 7.5vh;
 }
 .padtop1 {
-  margin-top: 10vh;
+  margin-top: 15vh;
 }
 
-/* p.selfp{
-/*     display:block; */
-/*     padding-right:10vh; */
-/*     width:auto; 
-
-
-a {     display:inline-block;
-    max-width: fit-content;
-padding-right: 0;}
-/*
-
- 
-;
-#ciao {
-cursor: url('./assets/manine/ciao_cursor2.png'), auto;
+/* ANIMAZIONE LETTERINE */
+span {
+  transition: color 0.2s ease, transform 0.2s ease;
 }
 
-#milan {
-    cursor: url('./assets/manine/milano_cursor.png'), auto;
+/* Define a keyframe animation for smooth transition and random movement */
+@keyframes smoothTranslate {
+  0% {
+    transform: translate(0, 0);
+  }
+  100% {
+    transform: translate(var(--random-x, 0px), var(--random-y, 0px));
+  }
 }
-#draw {
-    cursor: url('./assets/manine/disegno_cursor.png'), auto;
-} */
 
+/* IMMAGINE MARGHE*/
 img {
-  width: 22%;
+  width: 22.5%;
   height: auto;
 }
 
@@ -108,50 +92,68 @@ img {
   /* background-color: aqua; */
 }
 
+/* CONTATTI*/
 #contact {
-  margin-top: 10vh;
-  overflow-wrap: break-word;
-  width: 25%;
+  margin-top: 12.5vh;
+  /* overflow-wrap: break-word; */
+  width: 22.5vw;
 }
+
+/* /////////////////////////////////// */
 
 @media screen and (max-width: 1024px) {
+  html,
+  body {
+    overflow-y: scroll;
+  }
+
   #prescontainer {
     width: 100vw;
-
-    padding-right: 1vh;
-    font-size: 1.75rem;
-    line-height: 2.5rem;
-    padding-bottom: 5vh;
+    padding: 0 2.5vw 5vh 2.5vw;
+    height: auto;
   }
-
-  #marghe {
-    margin-right: -1vh;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  /* 
-    [class*="selfp"] {
-        /* font-size: 1.75rem; 
-        
-    } */
 
   .padtop {
     margin-top: 5vh;
   }
   .padtop1 {
-    margin-top: 7.5vh;
+    margin-top: 10vh;
   }
 
   #marghe {
-    /* margin-top: 2.5vh; */
-    /* margin-right: 2.5vh; */
-
-    width: 40vw;
-    /* margin-left:-1vh; */
+    position: relative;
+    float: right;
+    display: block;
+    bottom: auto;
+    width: 42.5vw;
   }
 
-  /*    #prescontainer {
-        margin: auto 0;
-    } */
+  #contact {
+    margin-top: 0;
+    padding: 0 2.75vw 10vh 2.75vw;
+    width: auto;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .nav {
+    display: none;
+  }
+
+  #prescontainer {
+    padding: 0 2.5vw 5vh 5vw;
+    height: auto;
+  }
+  [class*="selfp"] {
+    font-size: 24px;
+    line-height: 2rem;
+  }
+
+  .padtop1 {
+    margin-top: 5vh;
+  }
+
+  #marghe {
+    width: 55vw;
+  }
 }
