--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
   background-color: #fff;
 
   font-family: "IBM Plex Sans", sans-serif;
+  font-family: "IBM Plex Serif", serif;
   font-size: 16px;
 
   overflow: hidden;
