--- a/about.css
+++ b/about.css
@@ -32,8 +32,8 @@ canvas {
   margin-top: 7.5vh;
 }
 .padtop1 {
-  margin-top: 12.5vh;
-  margin-top: 10vh;
+  margin-top: 15vh;
+  /* margin-top: 10vh; */
 }
 
 /* ANIMAZIONE LETTERINE */
@@ -97,7 +97,7 @@ img {
 /* CONTATTI*/
 #contact {
   margin-top: 12.5vh;
-  margin-top: 10vh;
+  /* margin-top: 10vh; */
   /* overflow-wrap: break-word; */
   width: 22.5vw;
 }
