--- a/style.css
+++ b/style.css
@@ -62,6 +62,11 @@ img {
   position: fixed;
 }
 
+.label {
+  /* font-style: italic; */
+  color: #8e8e8e;
+}
+
 #works {
   right: 0;
   text-align: right;
