--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ a {
   display: block;
   color: black;
   border-bottom: solid 1px black;
-  padding: 0.5px;
+  margin: 2px 0;
   text-decoration: none;
   width: fit-content;
 }
