--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ body {
   background-color: #fff;
 
   font-family: "IBM Plex Sans", sans-serif;
+  font-family: "Akzidenz", sans-serif;
   /* font-family: "IBM Plex Serif", serif; */
   /* font-size: 16px; */
   /* font-weight: 300; */
