--- a/style.css
+++ b/style.css
@@ -28,6 +28,11 @@ body {
   overscroll-behavior: contain;
   overflow: hidden;
   overflow-x: hidden;
+
+  -webkit-user-select: none; /* Safari */
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* IE 10+ */
+  user-select: none;
 }
 
 ::-webkit-scrollbar {
