--- a/pages/project.css
+++ b/pages/project.css
@@ -34,8 +34,7 @@
   line-height: 2.5rem;
   padding: 0%;
 
-  font-family: "Akzidenz";
-  font-weight: 500;
+  font-family: "century-old-style-std", serif;
 }
 
 #anno {
