--- a/about.css
+++ b/about.css
@@ -20,11 +20,10 @@ canvas {
 }
 
 [class*="selfp"] {
-  word-break: normal;
+  word-break: break-word;
   margin: 0;
   font-size: 2.25rem;
   line-height: 2.75rem;
-  font-weight: 400;
   /* font-family: "IBM Plex Serif", serif; */
   font-family: "century-old-style-std", serif;
   font-style: normal;
