--- a/about.css
+++ b/about.css
@@ -22,7 +22,7 @@ canvas {
 [class*="selfp"] {
   word-break: break-word;
   margin: 0;
-  font-size: 2.15rem;
+  font-size: 2rem;
   line-height: 2.75rem;
   /* font-family: "IBM Plex Serif", serif; */
   font-family: "century-old-style-std", serif;
@@ -30,10 +30,10 @@ canvas {
 }
 
 .padtop {
-  margin-top: 2.75vh;
+  margin-top: 1.75rem;
 }
 .padtop1 {
-  margin-top: 15vh;
+  margin-top: 12.5vh;
   /* margin-top: 10vh; */
 }
 
