--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
   padding: 0;
   position: relative;
 
-  background-color: #fff;
+  background-color: #ffffff;
 
   font-family: "IBM Plex Sans", sans-serif;
   font-family: "Akzidenz", sans-serif;
