--- a/style.css
+++ b/style.css
@@ -104,7 +104,7 @@ img {
 @media screen and (max-width: 1024px) {
   html,
   body {
-    font-size: 18px;
+    /* font-size: 18px; */
     overflow-y: scroll;
   }
 
@@ -115,6 +115,15 @@ img {
 
 @media screen and (max-width: 768px) {
   .nav {
-    display: none;
+    width: 100%;
+    margin: auto;
+    text-align: center;
+    /* display: none; */
+  }
+
+  #works {
+    position: fixed;
+    text-align: center;
+    bottom: 1.75vw;
   }
 }
