--- a/about.css
+++ b/about.css
@@ -149,10 +149,10 @@ img {
     height: auto;
     min-height: 100vh;
   }
-  [class*="selfp"] {
+  /* [class*="selfp"] {
     font-size: 1.25rem;
     line-height: 1.75rem;
-  }
+  } */
 
   .padtop1 {
     margin-top: 7.5vh;
