--- a/about.css
+++ b/about.css
@@ -117,10 +117,10 @@ img {
     padding: 0 2.75vw 5vh 2.75vw;
     height: auto;
   }
-  /* [class*="selfp"] {
+  [class*="selfp"] {
     font-size: 1.5rem;
     line-height: 2rem;
-  } */
+  }
 
   .padtop {
     margin-top: 2.5vh;
