--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-/* per commentare e non shift + alt + a */
-
 :root {
   --screen-w: 100vw;
   --screen-h: 100vh;
@@ -18,20 +16,16 @@ body {
 
   background-color: #ffffff;
 
-  font-family: "IBM Plex Sans", sans-serif;
   font-family: "Akzidenz", sans-serif;
-  /* font-family: "IBM Plex Serif", serif; */
-  font-size: 16px;
+  font-family: Helvetica, Arial, sans-serif;
+  font-size: 0.95rem;
   font-weight: 300;
   color: black;
 
-  overscroll-behavior: contain;
-  overflow: hidden;
+  /* overscroll-behavior: contain;
+  overflow: hidden; */
   overflow-x: hidden;
 
-  -webkit-user-select: none; /* Safari */
-  -moz-user-select: none; /* Firefox */
-  -ms-user-select: none; /* IE 10+ */
   user-select: none;
 }
 
@@ -50,15 +44,17 @@ div {
 a {
   display: block;
   color: black;
-  border-bottom: solid 1px black;
   margin: 2px 0;
-  text-decoration: none;
   width: fit-content;
+  text-decoration: underline;
 }
 a:hover {
   color: #8e8e8e;
 }
-
+p {
+  margin: 0;
+  padding: 0;
+}
 img {
   width: 100%;
   height: auto;
@@ -71,32 +67,25 @@ img {
   white-space: nowrap;
   color: #fff;
   mix-blend-mode: difference;
+  text-decoration: none;
 
   vertical-align: baseline;
 
   z-index: 10;
   position: fixed;
 }
-
-.label {
-  /* font-style: italic; */
-  color: #8e8e8e;
-}
-
 #works {
   right: 0;
   text-align: right;
 }
 
-#list {
-  padding-top: 10vh;
-  overflow: hidden;
-  width: 25%;
-  height: 100vh;
-
-  /* border-left: solid 1px black; */
-
-  /*  background-color:burlywood; */
+/* CATEGORIE */
+.label {
+  /* font-style: italic; */
+  color: #8e8e8e;
+}
+i {
+  display: inline;
 }
 
 /* ////////////////////////// */
